--- a/ProfilPage_Ioannis.html
+++ b/ProfilPage_Ioannis.html
@@ -83,7 +83,7 @@
         </div>
         <div class="card-body">
                 <p class="cardDescription textCard">
-                  <img src="img/Ioannis.png" alt="Image_Profil" class="profilePic" align="left" >
+                  <img src="img/Ioannis.jpg" alt="Image_Profil" class="profilePic" align="left" >
 
                     <myName>Ioannis Nikas</myName>
                     <b>A</b>près plusieurs années d'études à l'université de Cergy-Pontoise, 
