--- a/ProfilPage_Kapucine.html
+++ b/ProfilPage_Kapucine.html
@@ -83,7 +83,7 @@
         </div>
         <div class="card-body">
                 <p class="cardDescription textCard">
-                  <img src="img/Kapucine.png" alt="Image_Profil" class="profilePic" align="left" >
+                  <img src="img/Kapucine.jpg" alt="Image_Profil" class="profilePic" align="left" >
 
                     <myName>Kapucine Nielsen</myName>
                     Initialement dans le milieu de la Production Graphique,
