--- a/ProfilPage_Lisa.html
+++ b/ProfilPage_Lisa.html
@@ -83,7 +83,7 @@
             </div>
             <div class="card-body">
                 <p class="cardDescription textCard">
-                    <img src="img/Lisa.png" alt="Image_Profil" class="profilePic" align="left">
+                    <img src="img/Lisa.jpg" alt="Image_Profil" class="profilePic" align="left">
 
                     <myName>Elizaveta Patrusheva</myName>
                     Titulaire d'une Licence Professionnelle en web marketing, j'ai travaillé en agence de communication, notamment dans le domaine
