--- a/ProfilPage_Paul.html
+++ b/ProfilPage_Paul.html
@@ -85,7 +85,7 @@
         </div>
         <div class="card-body">
                 <p class="cardDescription textCard">
-                  <img src="img/Paul.png" alt="Image_Profil" class="profilePic" align="left" >
+                  <img src="img/Paul.jpg" alt="Image_Profil" class="profilePic" align="left" >
 
                     <myName>Paul Moutier</myName>
                     J'ai commencé mes formations dans le commerce et marketing, j'ai toujours aimé les challenges et les épreuves ! Maintenant je me tourne vers une nouvelle formation.
