--- a/ProfilPage_Celine.html
+++ b/ProfilPage_Celine.html
@@ -83,7 +83,7 @@
         </div>
         <div class="card-body">
                 <p class="cardDescription textCard">
-                  <img src="img/Celine.png" alt="Image_Profil" class="profilePic" align="left" >
+                  <img src="img/Celine.jpg" alt="Image_Profil" class="profilePic" align="left" >
 
                     <myName>Céline Minaudier</myName>
                     Après 10 ans d’expérience en communication, je suis actuellement en
@@ -138,7 +138,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                            <h5 class="modal-title" id="exampleModalLabel">Compétences complémentaires</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
