--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
 
             <div class="col-sm-4 col-md-6 col-lg-4 col-xl-4 random blocCardPro">
-                  <a href="page7/ProfilPage_Lisa.html">
+                  <a href="ProfilPage_Lisa.html">
                       <div class="card blocprofil">
 
                             <div class="Bg-imglisa"> </div>
@@ -77,7 +77,7 @@
 
 
             <div class="col-sm-4 col-md-6 col-lg-4 col-xl-4 random blocCardPro">
-              <a href="page7/ProfilPage_Aymeric.html">
+              <a href="ProfilPage_Aymeric.html">
                 <div class="card blocprofil ">
                         <div class="Bg-imgaymeric"> </div>
                         <nomprofil>Aymeric</nomprofil>
@@ -87,7 +87,7 @@
 
 
             <div class="col-sm-4 col-md-6 col-lg-4 col-xl-4 random blocCardPro">
-              <a href="page7/ProfilPage_Celine.html">
+              <a href="ProfilPage_Celine.html">
                 <div class="card blocprofil ">
                         <div class="Bg-imgceline"> </div>
                         <nomprofil>Céline</nomprofil>
@@ -97,7 +97,7 @@
 
 
             <div class="col-sm-4 col-md-6 col-lg-4 col-xl-4 random blocCardPro">
-              <a href="page7/ProfilPage_Paul.html">
+              <a href="ProfilPage_Paul.html">
                 <div class="card blocprofil">
                         <div class="Bg-imgpaul"> </div>
                         <nomprofil>Paul</nomprofil>
@@ -107,7 +107,7 @@
 
 
             <div class="col-sm-4 col-md-6 col-lg-4 col-xl-4 random blocCardPro">
-              <a href="page7/ProfilPage_Kapucine.html">
+              <a href="ProfilPage_Kapucine.html">
                  <div class="card blocprofil">
                          <div class="Bg-imgkapucine"> </div>
                          <nomprofil>Kapucine</nomprofil>
@@ -117,7 +117,7 @@
 
 
             <div class="col-sm-4 col-md-6 col-lg-4 col-xl-4 random blocCardPro">
-              <a href="page7/ProfilPage_Ioannis.html">
+              <a href="ProfilPage_Ioannis.html">
                 <div class="card blocprofil">
                         <div class="Bg-imgioannis"> </div>
                         <nomprofil>Ioannis</nomprofil>
