--- a/ProfilPage_Lisa.html
+++ b/ProfilPage_Lisa.html
@@ -233,7 +233,7 @@
     </section>
 
     <div class="ReturnArrowContainer">
-        <a href="../page7.html" class="blackLink">
+        <a href="../index.html" class="blackLink">
             <i class="fas fa-arrow-circle-left fa-3x mobileVersion"></i>
         </a>
         <!--RETURN TO HOME BTN MOBILE-->
