--- a/ProfilPage_Celine.html
+++ b/ProfilPage_Celine.html
@@ -213,7 +213,7 @@
     </section>
 
     <div class="ReturnArrowContainer">
-        <a href="../page7.html" class="blackLink"><i class="fas fa-arrow-circle-left fa-3x mobileVersion"></i></a><!--RETURN TO HOME BTN MOBILE-->
+        <a href="../index.html" class="blackLink"><i class="fas fa-arrow-circle-left fa-3x mobileVersion"></i></a><!--RETURN TO HOME BTN MOBILE-->
     </div>
 
 
