--- a/ProfilPage_Ioannis.html
+++ b/ProfilPage_Ioannis.html
@@ -181,7 +181,7 @@
                 </blockquote>
             </div>
         </div>
-        <a href="../page7.html" class="blackLink"><i class="fas fa-arrow-circle-left fa-7x desktopVersion"></i></a><!--RETURN TO HOME BTN DESKTOP-->
+        <a href="../index.html" class="blackLink"><i class="fas fa-arrow-circle-left fa-7x desktopVersion"></i></a><!--RETURN TO HOME BTN DESKTOP-->
     </section>
 
     <!--Contact-->
